# journeygraph

./: .gitignore  CONVENTIONS.md  README.md  env.example  llm_pipeline_demo.ipynb  physical_infrastructure_layer.ipynb  pyproject.toml
demos/: README.md  dashboard_demo.json  llm_pipeline.ipynb  llm_pipeline.slides.html  pipeline_demo.py
demos/queries/: 01_station_compact.cypher  02_station_full.cypher  03_interruption_layer.cypher  04_accessibility_outages.cypher  05_trip_schedule.cypher  06_service_alerts.cypher
docs/: PIPELINE_RETHINK.md
queries/: README.md
queries/accessibility/: analytical.cypher  constraints.cypher  nodes.cypher  relationships.cypher
queries/cross_layer/: analytical.cypher
queries/delay_propagation/: analytical.cypher
queries/fare/: analytical.cypher  constraints.cypher  nodes.cypher  relationships.cypher
queries/gds/: analytical.cypher
queries/interruption/: constraints.cypher  nodes.cypher  relationships.cypher
queries/physical/: constraints.cypher  nodes.cypher  relationships.cypher
queries/service_schedule/: analytical.cypher  constraints.cypher  nodes.cypher  relationships.cypher
queries/transfer_impact/: analytical.cypher
scripts/: confirm_ties_behaviour.py  validate_anchor_resolution.py
src/: pipeline.py
src/common/: README.md  config.py  cross_layer.py  feed_info.py  layers.py  logger.py  neo4j_tools.py  paths.py  utils.py
src/common/validators/: accessibility.py  base.py  fare_zones.py  interruption.py  physical.py  service_schedule.py
src/ingest/: api_client.py  gtfs_loader.py
src/layers/: README.md
src/layers/accessibility/: README.md  __init__.py  extract.py  join_strategy_test.py  load.py  pathway_joiner.py  transform.py
src/layers/fare/: README.md  __init__.py  extract.py  load.py  transform.py
src/layers/interruption/: README.md  __init__.py  extract.py  load.py  transform.py
src/layers/physical/: README.md  __init__.py  endpoint_classifier.py  extract.py  load.py  transform.py
src/llm/: README.md  __init__.py  agent.py  agent_tools.py  anchor_clarifier.py  anchor_resolver.py  context_serializer.py  conventions.json  cypher_validator.py  disambiguation_strategies.py  expansion_config.py  hop_expander.py  llm_factory.py  narration_agent.py  narration_output.py  planner.py  planner_output.py  query_writer.py  run.py  run_with_query_writer.py  slice_registry.py  subgraph_builder.py  subgraph_output.py  text2cypher_output.py
tests/: conftest.py  test_accessibility_extract_transform.py  test_api_client.py  test_cross_layer.py  test_fare_extract_transform.py  test_fare_zone_validator.py  test_gtfs_loader.py  test_layers.py  test_physical_validator.py  test_planner.py  test_service_extract_transform.py  test_utils.py  test_validation_result.py
tests/eval/: README.md  VALIDATION_SLIDE.md  configs.yaml  run_harness.py  score_results.py  test_eval_framework.py  validate_questions.py
tests/llm/: test_agent_context.py  test_anchor_resolution_refactor.py  test_disambiguation_strategy.py  test_gds.py  test_narration_agent.py  test_narration_prompts.py  test_planner.py  test_query_writer.py  test_query_writer_smoke.py
(+13 files in other folders)
